--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -38,6 +38,7 @@ h1 {
     text-align: center;
     color: black;
     font-family: Ubuntu, sans-serif;
+    font-size: 3.5em;
 }
 
 body {
@@ -66,4 +67,10 @@ body {
 .weatherDescription{
     text-align: center;
     padding: 20px;
+}
+.button{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
