--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/Footer.html}"/>
     <title>Pogoda</title>
@@ -11,22 +11,72 @@
 <body>
 
 <div class="cityName">
-    <h1>Pogoda dla <th:block th:text="${weather.getCityName()}"></th:block></h1>
+    <h1>Pogoda dla
+        <th:block th:text="${weather1.getCity().getName()}"></th:block>
+    </h1>
 </div>
 
-<div class="weatherDescription" th:each="val : ${weather.getWeather()}">
-    <p th:text="${val.getDescription()}">
-</div>
-
-<div class="temperature">
-    <p>temperatura <th:block th:text="${weather.getMain().getTemp()}"></th:block>&#176;C</p>
-</div>
-
-<div class="clouds">
-    <p>zachmurzenie <th:block th:text="${weather.getClouds().getAll()}"></th:block>%</p>
-</div>
+<ul class="city-list">
+    <li class="city-list-dayOfWeek" th:text="${dayOfWeek.get(0)}"></li>
+    <br>
+    <li class="city-list-date" th:text="${#temporals.format(#temporals.createNow(),'dd.MM.yyyy')}"></li>
+    <br>
 
 
+    <li class="city-list-header" th:each="v, stat : ${firstDay}">
+        <div th:if="${v}">
+            <div class="city-list-hour" th:text="${#temporals.format(hours.get(stat.index),'hh:mm')}"></div>
+        </div>
+        <div class="city-list-icon" th:each="w : ${v?.getWeather()}">
+            <img th:src="@{'http://openweathermap.org/img/wn/10d@2x.png'}">
+        </div>
+        <div class="city-list-temp" th:text="${v?.getMain()?.getTemperature()}"></div>
+        <div class="city-list-pressure" th:text="${v?.getMain()?.getPressure()}"></div>
+        <br>
+    </li>
+
+
+    <br>
+    <li class="city-list-dayOfWeek" th:text="${dayOfWeek.get(1)}"></li>
+    <br>
+    <li class="city-list-date" th:text="${#temporals.format(day.plusDays(1),'dd.MM.yyyy')}"></li>
+    <br>
+    <li class="city-list-header" th:each="v,stat : ${secondDay}">
+        <div th:if="${v}">
+            <div th:text="${#temporals.format(hours.get(stat.index),'hh:mm')}"></div>
+        </div>
+        <div class="city-list-icon" th:each="w : ${v?.getWeather()}">
+            <span th:text="${w?.getIcon()}"></span>
+            <br>
+        </div>
+    </li>
+    <br>
+    <li class="city-list-dayOfWeek" th:text="${dayOfWeek.get(2)}"></li>
+    <br>
+    <li class="city-list-date" th:text="${#temporals.format(day.plusDays(2),'dd.MM.yyyy')}"></li>
+    <br>
+    <li class="city-list-icon" th:each="v : ${thirdDay}">
+        <div th:text="${v?.getDtTxt()}">
+        </div>
+    </li>
+    <br>
+    <li class="city-list-dayOfWeek" th:text="${dayOfWeek.get(3)}"></li>
+    <br>
+    <li th:text="${#temporals.format(day.plusDays(3),'dd.MM.yyyy')}"></li>
+    <li class="city-list-icon" th:each="v : ${fourthDay}">
+            <span th:text="${v?.getDtTxt()}">
+                <span></span>
+            </span>
+    </li>
+    <br>
+    <li class="city-list-dayOfWeek" th:text="${dayOfWeek.get(4)}"></li>
+    <br>
+    <li class="city-list-date" th:text="${#temporals.format(day.plusDays(4),'dd.MM.yyyy')}"></li>
+    <br>
+    <li class="city-list-icon" th:each="v : ${fifthDay}">
+            <span th:text="${v?.getDtTxt()}"></span>
+    </li>
+</ul>
 
 <form class="button" th:action="@{/}" method="post">
     <button type="submit">wyszukaj ponownie</button>
