added getForecast & getFirstDay tests

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -17,8 +17,7 @@
 
 
 <div class="cityName">
-    <h1>pogoda dla
-        <th:block th:text="${weather1.getCity().getName()}"></th:block>
+    <h1>pogoda dla <th:block th:text="${weather1.getCity().getName()}"></th:block>
     </h1>
 </div>
 
