--- a/src/main/resources/templates/FindCity.html
+++ b/src/main/resources/templates/FindCity.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="header" th:insert="Footer"></div>
+<div class="header" th:insert="Header"></div>
 
 <div class="searchMenu">
     <h1>Find city</h1>
