--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,22 +1,31 @@
-.header, .footer{
-    padding: 20px;
-    text-align: center;
-    background: dimgray;
-    width: 100%;
-
-}
 .header{
-    position: absolute;
-    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    color: saddlebrown;
+    background-color: #1abc9c;
+    /*padding-bottom: 20px;*/
+    margin-bottom: 100px;
     top: 0;
 }
 .footer {
     position: fixed;
-    color: blueviolet;
-    left: 0;
+    text-align: center;
+    background-color: #333;
+    width: 100%;
+    padding: 20px 20px;
+    height: 20px;
     bottom: 0;
+    left: 0;
 }
-
+body {
+    border: 2px solid red;
+    background-color: #f1f1f1;
+    margin-top: 200px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 .cityName {
     display: flex;
     justify-content: center;
@@ -24,25 +33,13 @@
     font-weight: 300;
     padding: 20px;
 }
-
-body {
-    margin-top: 100px;
-    background-color: cadetblue;
-    background-size: cover;
-    margin-bottom: 100px;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
 .searchMenu {
     padding: 50px;
     font-weight: 400;
     text-align: center;
     color: black;
-    margin-top: 80px;
-
+    /*margin-top: 80px;*/
 }
-
 .button{
     text-align: center;
     display: flex;
@@ -50,14 +47,14 @@ body {
     justify-content: center;
     font-family: sans-serif;
     font-size: 35px;
-    font-weight: 500;
+    /*font-weight: 500;*/
 }
 
 li, p, h5{
     display: inline;
 }
 
-div, div, span{
+div, span{
     display: inline;
     color: black;
 }
@@ -69,9 +66,9 @@ div, div, span{
 }
 
 .city-list-dayOfWeek {
-    color: ghostwhite;
-    font-weight: 600;
-    font-size: 40px;
+    color: black;
+    font-weight: 400;
+    font-size: 35px;
     font-family: sans-serif;
 }
 .city-list-date{
