--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>header</title>
 </head>
 <body>
-
 <header th:fragment="header">
-    <form th:action="@{/weatherResult}"  method="post">
-        <h1>Hello header</h1>
+    <h1>Hello header</h1>
+    <form class="button" th:action="@{/}" method="post">
+        <button type="submit">wyszukaj ponownie</button>
     </form>
 </header>
-
 </body>
 </html>
