forwarded from Dispatcher, dropped session

--- a/src/main/resources/templates/Welcome.html
+++ b/src/main/resources/templates/Welcome.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
 <body>
 
-<div class="">
+<div class="welcome_page">
     <form th:action="@{/decision}" th:object="${cityObject}" method="post">
         <input type="text" placeholder="podaj miasto" th:field="${cityObject.name}" required>
         <br>
-        <input type="checkbox" id="one" value="1" th:field="${cityObject.id}">
+        <input type="radio" id="one" value="1" th:field="${cityObject.id}">
         <label for="one">jednodniowa</label>
-        <input type="checkbox" id="two" value="2" th:field="${cityObject.id}">
+        <input type="radio" id="two" value="2" th:field="${cityObject.id}">
         <label for="two">pięcio dniowa</label>
         <br>
         <br>
