--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -22,9 +22,14 @@
 body {
     border: 2px solid red;
     background-color: #f1f1f1;
-    margin-top: 200px;
+    margin-top: 150px;
+    margin-bottom: 50px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
+}
+.welcome_page{
+    text-align: center;
+    border-top: 200px;
 }
 .cityName {
     display: flex;
