--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,33 +1,50 @@
-.header{
+.header, .footer{
+    font-family: Helvetica, sans-serif;
     position: fixed;
     width: 100%;
-    height: 50px;
-    text-align: center;
-    color: saddlebrown;
-    background-color: #1abc9c;
-    /*padding-bottom: 20px;*/
-    margin-bottom: 100px;
-    top: 0;
+    background-color: #333;
+}
+.header a{
+    color: white;
+    text-decoration: none;
+    overflow: hidden;
+}
+.center{
+    margin: 0;
+    position: absolute;
+    left: 45%;
+}
+.right{
+    font-size: 16px;
+    float: right;
+}
+.header a:hover {
+    background-color: #ddd;
+    color: black;
 }
 .footer {
-    position: fixed;
     text-align: center;
-    background-color: #333;
-    width: 100%;
-    padding: 20px 20px;
-    height: 20px;
-    bottom: 0;
-    left: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 0;
+}
+.subButton{
+    background-color: #4CAF50;
+    color: #f1f1f1;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 15px;
 }
 body {
     background-color: #f1f1f1;
-    margin-top: 150px;
-    margin-bottom: 50px;
+    /*margin-top: 150px;
+    margin-bottom: 50px;*/
+    margin: 0;
     padding-top: 20px;
     padding-bottom: 50px;
 }
 .welcome_page {
-    /*text-align: center;*/
+    text-align: center;
     background-color: #f1f1f1;
     margin-top: 150px;
     margin-bottom: 50px;
@@ -48,15 +65,16 @@ body {
     color: black;
     /*margin-top: 80px;*/
 }
-.button{
+/*.button{
+    position: relative;
     text-align: center;
-    display: flex;
+    !*display: flex;*!
     align-items: center;
     justify-content: center;
     font-family: sans-serif;
     font-size: 35px;
-    /*font-weight: 500;*/
-}
+    !*font-weight: 500;*!
+}*/
 
 li, p, h5{
     display: inline;
@@ -101,5 +119,13 @@ p{
 .inner-list{
     display: inline;
     position: relative;
+}
+.default_error{
+    padding: 25px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    text-align: center;
+    color: #4CAF50;
+    background-color: #f1f1f1;
 }
 
