added background picture to static

--- a/src/main/resources/templates/Footer.html
+++ b/src/main/resources/templates/Footer.html
@@ -7,7 +7,8 @@
 <body>
 
 <footer th:fragment="footer">
-    <p>Made with &#9829; by Radosław Paszkiewicz radoslaw.paszkiewicz1024@gmail.com</p>
+    <a class="footer_text">Made with &#9829; by Radosław Paszkiewicz</a>
+    <a href="mailto:radoslaw.paszkiewicz1024@gmail.com?subject=Mail from weather API"> radoslaw.paszkiewicz1024@gmail.com</a>
 </footer>
 
 </body>
