--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,8 +1,13 @@
 .header, .footer{
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     position: fixed;
     width: 100%;
     background-color: #333;
+}
+.header{
+    top: 0;
+    left: 0;
+    padding: 15px;
 }
 .header a{
     color: white;
@@ -10,46 +15,45 @@
     overflow: hidden;
 }
 .center{
-    margin: 0;
     position: absolute;
-    left: 45%;
+    left: 43%;
+    font-size: 30px;
 }
 .right{
-    font-size: 16px;
     float: right;
+    padding: 10px 30px;
 }
 .header a:hover {
     background-color: #ddd;
     color: black;
 }
-.footer {
+.footer{
     text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin: 0;
+    bottom: 0;
+    left: 0;
+    padding: 17px;
 }
-.subButton{
-    background-color: #4CAF50;
-    color: #f1f1f1;
-    padding: 15px;
-    cursor: pointer;
-    font-size: 15px;
+.footer a{
+    color: white;
+    font-style: italic;
 }
-body {
-    background-color: #f1f1f1;
-    /*margin-top: 150px;
-    margin-bottom: 50px;*/
-    margin: 0;
-    padding-top: 20px;
-    padding-bottom: 50px;
+/**********************************************/
+html{
+    background:
+    url("https://w-dog.pw/android-wallpapers/13/9/469943970885558/black-town-city-grey-minimalism-picture-shadow-dark.jpg")
+    no-repeat fixed center;
+    background-size: 100% 95%;
+}
+body{
+    margin: auto;
+    padding: 20%;
+    /*background: #f1f1f1;*/
 }
 .welcome_page {
+    margin: auto;
+    padding: 20%;
+    width: 100%;
     text-align: center;
-    background-color: #f1f1f1;
-    margin-top: 150px;
-    margin-bottom: 50px;
-    padding-top: 20px;
-    padding-bottom: 50px;
 }
 .cityName {
     display: flex;
@@ -65,17 +69,6 @@ body {
     color: black;
     /*margin-top: 80px;*/
 }
-/*.button{
-    position: relative;
-    text-align: center;
-    !*display: flex;*!
-    align-items: center;
-    justify-content: center;
-    font-family: sans-serif;
-    font-size: 35px;
-    !*font-weight: 500;*!
-}*/
-
 li, p, h5{
     display: inline;
 }
