--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,13 +2,12 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/Header.html}"/>
     <meta charset="UTF-8">
     <title>error</title>
 </head>
 <body>
 <div class="header" th:insert="Header"></div>
-<h3 class="default_error">Wystąpił nieoczekiwany błąd, przepraszamy!</h3>
+<div class="error_message">Wystąpił nieoczekiwany błąd, przepraszamy!</div>
 <div class="footer" th:insert="Footer"></div>
 </body>
 </html>
